--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,4 +12,5 @@ akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.actor.allow-java-serialization = on
 
